fixing the social network links on narrow screens

--- a/sites/all/themes/soft/css/soft-alpha-default-narrow.css
+++ b/sites/all/themes/soft/css/soft-alpha-default-narrow.css
@@ -7,4 +7,7 @@
 input[type="search"] {
   width: 115px;
 }
-
+.social-network-links a {
+  width: 2.5em;
+  height: 2.5em;
+}
